--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{jsx,vue}": [
+    "*.{js,jsx,vue}": [
       "vue-cli-service lint",
       "git add"
     ]
